--- a/config/preprocessing.yaml
+++ b/config/preprocessing.yaml
@@ -1,5 +1,5 @@
 dataset:
-    input_paths: ['data/True.csv', 'data/Fake.csv']
-    output_paths: ['data/True_prep.csv', 'data/Fake_prep.csv']
+    input_paths: ["data/True.csv", "data/Fake.csv"]
+    output_paths: ["data/True_prep.csv", "data/Fake_prep.csv"]
 variables:
     text_vars: ["title", "text"]
