--- a/requirements.txt
+++ b/requirements.txt
@@ -18,7 +18,9 @@ omegaconf==2.1.1
 packaging==21.3
 pandas==1.4.1
 Pillow==9.0.1
+py4j==0.10.9.3
 pyparsing==3.0.7
+pyspark==3.2.1
 python-dateutil==2.8.2
 python-slugify==6.1.1
 pytz==2021.3
