--- a/config/modeling.yaml
+++ b/config/modeling.yaml
@@ -17,5 +17,7 @@ tuning:
     n_folds: 3
     count_vectorizer:
         min_df: [1, 2, 3]
+    idf:
+        min_doc_freq: [0, 1]
     lr:
         reg_param: [0.01, 0.1, 0, 1]
