--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,15 @@
 antlr4-python3-runtime==4.8
-certifi==2021.10.8
-charset-normalizer==2.0.12
+anyio==3.5.0
+asgiref==3.5.0
 click==8.0.4
 cycler==0.11.0
-fonttools==4.30.0
-Hydra==2.5
+fastapi==0.75.0
+fonttools==4.31.0
+h11==0.13.0
 hydra-core==1.1.1
 idna==3.3
-importlib-resources==5.4.0
 joblib==1.1.0
-kaggle==1.5.12
-kiwisolver==1.3.2
+kiwisolver==1.4.0
 matplotlib==3.5.1
 nltk==3.7
 numpy==1.22.3
@@ -19,23 +18,19 @@ packaging==21.3
 pandas==1.4.1
 Pillow==9.0.1
 py4j==0.10.9.3
+pydantic==1.9.0
 pyparsing==3.0.7
 pyspark==3.2.1
 python-dateutil==2.8.2
-python-slugify==6.1.1
 pytz==2021.3
 PyYAML==6.0
-regex==2022.3.2
-requests==2.27.1
+regex==2022.3.15
 scipy==1.8.0
 seaborn==0.11.2
 six==1.16.0
-text-unidecode==1.3
+sniffio==1.2.0
+starlette==0.17.1
 tqdm==4.63.0
-urllib3==1.26.8
-wordcloud==1.8.1
-zipp==3.7.0
-streamlit==1.7.0
-plotly==5.6.0
-fastapi==0.75.0
+typing_extensions==4.1.1
 uvicorn==0.17.6
+wordcloud==1.8.1
